# api.whatsth.is

./: .gitignore  .gitpod.yml  CHANGELOG  CHANGELOG.md  Dockerfile  README.md  detection.json  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  whatsapi-dotnet.sln
.devcontainer/: devcontainer.json  postAttachCommand.sh  postCreateCommand.sh
.github/ISSUE_TEMPLATE/: report_detection.md  report_dns.md
.github/workflows/: build-test.yml  build.yml  commit-test.yml  commit-tests.yml  docker-edge.yml  docker-main.yml  sonar.yml
Whatsthis.API/: Program.cs  Whatsthis.API.csproj  appsettings.Development.json
Whatsthis.API.Tests/: Whatsthis.API.Tests.csproj
Whatsthis.API.Tests/Service/: ConfigurationServiceTests.cs  DnsServiceTests.cs  InspectionServiceTests.cs  WhoisServiceTests.cs
Whatsthis.API/Controllers/: DomainController.cs  InspectionController.cs  SignallingController.cs
Whatsthis.API/Models/: DnsData.cs  DnsMaildata.cs  InspectionData.cs  InspectionEntity.cs  InspectionResultInformation.cs  InspectionTechnologyCollection.cs  InspectonSetup.cs  SignalMessage.cs  WhoisData.cs
Whatsthis.API/Properties/: launchSettings.json
Whatsthis.API/Service/: ConfigurationService.cs  DnsService.cs  InspectionService.cs  WhoisService.cs
Whatsthis.API/Utilities/: UrlHelper.cs
api/: __main__.py  apiresponse.py  cache.py  config.py  database.py  dnslookup.py  inspection.py  main.py  models.py  redis.py  router.py  schemas.py  server.py  wordpress.py
api/dns/: dnslookup.py  whois.py
api/inspection/: base.py  (+1 more)
tests/: __init__.py  test_api.py
(+8 files in other folders)
