[tool.poetry]
name = "api.whatsth.is"
version = "0.2.7.1"
description = "Website inspector backend built in Python."
authors = ["soup-bowl <code@soupbowl.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.1"
PyYAML = "^6.0"
redis = "^4.4.4"
aioredis = "^2.0.1"
urllib3 = "^1.26.11"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
dnspython = "^2.2.1"
gunicorn = "^20.1.0"
python-whois = "^0.8.0"
coverage = "^7.2.2"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
indent-string = "\t"
max-line-length = 120

[tool.pylint.design]
max-attributes = 10

[tool.pylint.logging]
# E0401 - Doesn't seem to work for me.
# R0902-R0903 - I don't understand why this is 'bad'?
disable = ["E0401", "R0902", "R0903"]

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic" # Schemas conflict.
